plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'io.projectreactor:reactor-test'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT 관련 의존성
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    //json 처리
    implementation 'org.json:json:20240303'

    //csv파일 읽기
    implementation 'org.apache.commons:commons-csv:1.8'

    //elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    // OpenTelemetry 의존성 추가
    implementation 'io.opentelemetry:opentelemetry-api:1.36.0'
    implementation 'io.opentelemetry:opentelemetry-sdk:1.36.0'
    implementation 'io.opentelemetry:opentelemetry-exporter-logging:1.36.0'

    // Swagger/OpenAPI 의존성
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
////    //Elasticsearch와 Java 애플리케이션 간 통신을 위한 공식 클라이언트
//    implementation 'co.elastic.clients:elasticsearch-java'

    //JSON ↔ Java 객체 간 직렬화/역직렬화를 수행하는 라이브러리
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'


    //logstash 사용을 위한 라이브러리
    implementation "net.logstash.logback:logstash-logback-encoder:7.4"



    //s3를 위한 라이브러리
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'


    //logback
    implementation 'com.sndyuk:logback-more-appenders:1.8.5'

}

tasks.named('test') {
    useJUnitPlatform()
}
